--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -19,7 +19,7 @@
   width: 100%;
   background-size: 20px 20px;
   background-position: 6px 5px;
-  background-image: url("../assets/plus2.svg");
+  background-image: url("../../assets/plus2.svg");
   text-align: left;
   transition: 100ms;
   user-select: none;
@@ -35,7 +35,7 @@
   width: 100%;
   background-size: 20px 20px;
   background-position: 6px 5px;
-  background-image: url("../assets/settings1.svg");
+  background-image: url("../../assets/settings1.svg");
 }
 
 #sidenav #otherBtns {
@@ -46,7 +46,7 @@
 
 #settingsBtn.active {
   color: #dfdfdf;
-  background-image: url("../assets/settings2.svg");
+  background-image: url("../../assets/settings2.svg");
 }
 
 .sidenavBtn {
@@ -76,52 +76,52 @@
 
 /* block */
 .sidenavBtn.block {
-  background-image: url("../assets/listIcons/blockList.svg");
+  background-image: url("../../assets/listIcons/blockList.svg");
 }
 
 .sidenavBtn.block.active {
-  background-image: url("../assets/listIcons/blockList1.svg");
+  background-image: url("../../assets/listIcons/blockList1.svg");
 }
 
 /* checklist */
 .sidenavBtn.checklist {
-  background-image: url("../assets/listIcons/checklistList.svg");
+  background-image: url("../../assets/listIcons/checklistList.svg");
 }
 
 .sidenavBtn.checklist.active {
-  background-image: url("../assets/listIcons/checklistList1.svg");
+  background-image: url("../../assets/listIcons/checklistList1.svg");
 }
 
 /* text */
 .sidenavBtn.text {
-  background-image: url("../assets/listIcons/textList.svg");
+  background-image: url("../../assets/listIcons/textList.svg");
 }
 
 .sidenavBtn.text.active {
-  background-image: url("../assets/listIcons/textList1.svg");
+  background-image: url("../../assets/listIcons/textList1.svg");
 }
 
 /* accounts */
 .sidenavBtn.accounts {
-  background-image: url("../assets/listIcons/accountsList.svg");
+  background-image: url("../../assets/listIcons/accountsList.svg");
 }
 
 .sidenavBtn.accounts.active {
-  background-image: url("../assets/listIcons/accountsList1.svg");
+  background-image: url("../../assets/listIcons/accountsList1.svg");
 }
 
 /* locked */
 .sidenavBtn.locked {
-  background-image: url("../assets/lock.svg");
+  background-image: url("../../assets/lock.svg");
 }
 
 .sidenavBtn.locked.active {
-  background-image: url("../assets/lock1.svg");
+  background-image: url("../../assets/lock1.svg");
 }
 
 /* unlocked */
 .sidenavBtn.unlocked.active {
-  background-image: url("../assets/unlock1.svg");
+  background-image: url("../../assets/unlock1.svg");
 }
 
 /* others */
