--- a/src/css/navbars.css
+++ b/src/css/navbars.css
@@ -3,14 +3,14 @@
   height: 100%;
   background-color: var(--bg1);
   font-size: 0;
-  padding: 0 8px;
+  padding: var(--menubarheight) 12px 0 12px;
   overflow-x: hidden;
   flex-shrink: 0;
   flex-grow: 0;
   flex-direction: column;
   display: flex;
   transition: 100ms;
-  width: calc(var(--sidenavwidth) - 16px);
+  width: calc(var(--sidenavwidth) - 24px);
 }
 
 #sidenav .header {
@@ -25,11 +25,6 @@
   margin: 0 0 -4px 0;
 }
 
-#sidenav #filebtns .folderdiv {
-  margin: 3px 0 2px 0;
-  display: flex;
-  flex-direction: column;
-}
 
 #sidenav #filebtns .sidenavbtn {
   width: 100%;
@@ -42,8 +37,8 @@
 
 #sidenav #filebtns .sidenavbtn.file.active {
   background-color: var(--green);
-  color: var(--textWhite);
-  background-image: url("../../assets/icons/dot1.svg") !important;
+  color: var(--textwhite);
+  background-image: url("../../assets/icons/filepath/dot1.svg") !important;
 }
 
 #sidenav #filebtns .folderbtn {
@@ -54,13 +49,13 @@
   background-color: var(--bg1);
   border-radius: 6px;
   font-size: 16px;
-  margin-top: 8px;
+  margin: 8px 0 2px 0;
 }
 
 #sidenav #filebtns .folderbtn .folder {
   padding-left: 18px;
   font-size: 16px;
-  background-position: 0 1px;
+  background-position: 0 1px; 
   flex-grow: 1;
   background-color: var(--bg1);
   color: var(--text4);
@@ -85,16 +80,17 @@
 }
 
 #sidenav #filebtns .folderbtn .folder.down {
-  background-image: url("../../assets/icons/caretDown.svg");
+  background-image: url("../../assets/icons/filepath/caretDown.svg");
 }
 
 #sidenav #filebtns .folderbtn .folder.right {
-  background-image: url("../../assets/icons/caretRight.svg");
+  background-image: url("../../assets/icons/filepath/caretRight.svg");
 }
 
 #sidenav #filebtns .sidenavbtn.file {
-  background-image: url("../../assets/icons/dot.svg");
+  background-image: url("../../assets/icons/filepath/dot.svg");
   background-position: 1px 2px;
+  width: 100%;
   padding: 2px 0 2px 18px;
   color: var(--text3);
   font-size: 14px;
@@ -110,14 +106,16 @@
 }
 
 #menubar {
+  border-bottom: 2px solid var(--bg1);
   width: 100vw;
   -webkit-app-region: drag;
-  background-color: var(--bg1);
+  background-color: var(--bg2);
   height: var(--menubarheight);
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   gap: 16px;
+  color: var(--text2);
 }
 
 #menubar div {
@@ -129,9 +127,9 @@
 
 #menubar button {
   margin: 0;
-  min-width: calc(var(--menubarheight) - 8px);
+  min-width: calc(var(--menubarheight) - 4px);
   border-radius: 4px;
-  padding: 0 6px;
+  padding: 0 8px;
   height: calc(var(--menubarheight) - 8px);
   text-align: center;
   white-space: nowrap;
@@ -139,20 +137,19 @@
   background-color: transparent;
   transition: 100ms;
   color: var(--text2);
+}
+
+#menubar p, #menubar button {
   -webkit-app-region: no-drag;
   font-size: 12px;
 }
 
-#menubar p {
-  -webkit-app-region: no-drag;
-}
-
 #menubar button:hover {
-  background-color: var(--bg2);
+  background-color: var(--bg3);
 }
 
 #menubar #osbtns {
-  margin-right: 4px;
+  margin-right: 6px;
 }
 
 #menubar #osbtns button#closebtn {
@@ -167,13 +164,26 @@
   margin-left: auto;
 }
 
-#menubar #path {
-  margin-left: calc(var(--sidenavwidth) + 4px);
-  font-size: 0;
+#menubar #actions button {
+  background-size: 14px 14px;
+
 }
 
-#menubar #path .path {
-  font-size: 12px;
+#menubar #path {
+  margin-left: calc(var(--sidenavwidth) + 6px);
+  font-size: 0;
+}
+#menubar #path .path.folder:empty:before {
+  color: var(--text1);
+  content: "Untitled Folder";
+  pointer-events: none;
+}
+
+
+#menubar #path .path.file:empty:before {
+  color: var(--text1);
+  content: "Untitled File";
+  pointer-events: none;
 }
 
 #menubar #path .path.slash {
@@ -182,11 +192,7 @@
   color: var(--text1);
 }
 
-#menubar #lastedited p {
-  font-size: 12px;
-  text-align: center;
-  width: 100%;
-}
 #menubar #lastedited {
+  justify-content: center;
   flex-grow: 1;
 }
