--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,9 +10,9 @@
   --text2: #404040;
   --text3: #4f4f4f;
   --text4: #5f5f5f;
-  --text5:  #6f6f6f;
-  --text6:  #7f7f7f;
-  --textWhite: #cecece;
+  --text5: #6f6f6f;
+  --text6: #7f7f7f;
+  --textwhite: #cecece;
   --green: #009966;
   --selectionGreen: #0099662f;
   --greentransparent: #0099661a;
@@ -24,4 +24,5 @@
   --redtransparent: #bf2d4b1a;
   --sidenavwidth: 180px;
   --menubarheight: 32px;
+  --gutterwidth: 28px;
 }
